# cutestation

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  Aarluk.flat.kml  Aarluk.kml  CMakeLists.txt  README.md  amarok.dump  amarok_flight.dump  amarok_velocity.dump  ci_requirements.txt  conanfile.txt  config.json  cutestation.pro  gps.py  kml  kml_noalt  makemini  ookpik.dump  ookpik_flight.dump  ookpik_velocity.dump
dumps/: dump+1560916920.anirniq  dump+1560919682.anirniq  dump+1560919842.anirniq  dump+1560963972.anirniq  dump+1560964743.anirniq  dump+1560964965.anirniq  dump+1560978406.anirniq  dump+1560980774.anirniq
inc/: app.h  configurator.h  data_node.h  data_tree.h  displayer.h  distributor.hh  log.h  message_ingestor.h  serial.hh  serializer.hh  series.h  socket_dispatcher.h  timeseries.h  util.h
proto/: CMakeLists.txt  packet.proto  proto.pro
proto/inc/model/: series.hh
proto/inc/proto/: packet.h
proto/inc/ui/: app.hh
proto/schema/: message.proto
proto/schema/src/: message.pb.cc  message.pb.h
proto/src/model/: series.cc
proto/src/ui/: app.cc
src/cute/: CMakeLists.txt
src/cute/app/: CMakeLists.txt  app.cc  main.cc  qt.conf  window.cc  window.hh  window_factory.cc  window_factory.hh
src/cute/app/ui/: window.ui
src/cute/data/: CMakeLists.txt  average_value.cc  average_value.hh  dynamic_value.cc  dynamic_value.hh  no_sampling_policy.hh  sampling_policy.hh  series.hh  series_factory.cc  series_factory.hh  time_series.cc  time_series.hh  value.hh  value_factory.cc  value_factory.hh
src/cute/data/tests/: main.cc  test_dynamic_value.cc  test_time_series.cc  test_value_factory.cc
src/cute/io/: CMakeLists.txt  client.cc  client.hh  dispatcher.cc  dispatcher.hh  dispatcher_factory.cc  dispatcher_factory.hh  socket_dispatcher.cc  socket_dispatcher.hh
src/cute/io/tests/: test_client.cc  test_dispatcher.cc  test_socket_dispatcher.cc
src/cute/proto/: CMakeLists.txt
src/cute/src/: app.cc  app.h  app.hh  configurator.cc  configurator.h  main.cc  socket_connector.cc  socket_connector.h  socket_dispatcher.cc  socket_dispatcher.h  window.cc  window.hh  window_factory.cc  window_factory.hh
src/cute/ui/: window.ui
src/cute/widgets/: CMakeLists.txt  button_widget.cc  button_widget.hh  chart_widget.cc  chart_widget.hh  compass_widget.cc  compass_widget.hh  number_value_widget.cc  number_value_widget.hh  range_mapping.cc  range_mapping.hh  single_value_widget.cc  single_value_widget.hh  spacer_widget.hh  state_value_widget.cc  state_value_widget.hh  value_widget.cc  value_widget.hh  view_widget.cc  view_widget.hh  widget.cc  widget.hh  widget_factory.cc  widget_factory.hh  widget_grid.cc  widget_grid.hh  widget_group.cc  widget_group.hh
src/cute/widgets/tests/: main.cc  test_range_mapping.cc
src/data/: CMakeLists.txt  command.cc  command_factory.cc  data.cc  data_node.cc  data_tree.cc  keyvaluedata.cc  node.cc  node_finder.cc  numericaldata.cc  series.cc  series_factory.cc  source.cc  time_series.cc  tree.cc
src/data/inc/data/: min_max_value.hh  sampling_policy.h  sampling_policy.hh  series.h  series.hh  series_factory.h  series_factory.hh  single_value.hh  source.h  time_series.h  time_series.hh
src/data/src/: no_sampling_policy.cc  no_sampling_policy.h  no_sampling_policy.hh  sampling_policy.cc  series.cc  series_factory.cc  single_value.cc  source.cc  time_series.cc
src/data/tests/: test_time_series.cc
src/io/: CMakeLists.txt  socket_connector.cc  socket_dispatcher.cc
src/io/inc/io/: client.h  client.hh  dispatcher.hh  dispatcher_factory.hh  socket_dispatcher.hh  unix_dispatcher.hh
src/io/src/: client.cc  dispatcher.cc  dispatcher_factory.cc  socket_dispatcher.cc  unix_dispatcher.cc
src/io/tests/: main.cc  test_client.cc  test_dispatcher.cc  test_socket_dispatcher.cc  test_unix_dispatcher.cc
src/net/: CMakeLists.txt  socket.hh  stream.hh
src/net/inc/net/: net.hh  server.hh  socket.h  socket.hh  stream.hh  tcp_server.h  tcp_server.hh  tcp_socket.h  tcp_socket.hh  unix_server.h  unix_server.hh  unix_socket.h  unix_socket.hh
src/net/src/: fdbuf.cc  fdbuf.h  fdbuf.hh  server.cc  socket.cc  tcp_server.cc  tcp_socket.cc  unix_server.cc  unix_socket.cc
src/net/src/unix/: net.cc  server.cc  sockbuf.cc  sockbuf.hh  socket.cc
src/net/src/windows/: net.cc  server.cc  sockbuf.cc  sockbuf.hh  socket.cc
src/net/tests/: main.cc  test_stream.cc  test_tcp.cc  test_unix.cc
src/net/unix/: net.cc  server.cc  sockbuf.cc  sockbuf.hh  socket.cc
src/net/windows/: net.cc  server.cc  sockbuf.cc  sockbuf.hh  socket.cc
src/topic/: CMakeLists.txt  global_topic_manager.cc  local_topic_manager.cc  local_topic_manager.hh  publisher.cc  subscriber.cc  topic_manager.cc  topic_manager.hh
src/topic/inc/topic/: callback.hh  mock.hh  publisher.hh  subscribe_info.hh  subscriber.hh  type.hh
src/topic/src/: global_topic_manager.cc  global_topic_manager.hh  local_topic_manager.cc  local_topic_manager.hh  node.cc  node.hh  publisher.cc  subscriber.cc  topic.cc  topic.hh  topic_manager.cc  topic_manager.hh
src/topic/tests/: test_pubsub.cc
src/util/: CMakeLists.txt  geo.cc  geo.hh  json.cc  switch.cc  switch.hh  thread.cc  thread.hh  time.hh  type.hh
src/util/inc/util/: json.hh  test.hh  thread.hh  time.hh  util.h
src/util/src/: json.cc  util.cc
src/util/tests/: test_geo.cc  test_json.cc  test_switch.cc  test_type.cc
src/widgets/: CMakeLists.txt  button_widget.cc  chart_widget.cc  chartwidget.cc  control_widget.cc  single_value_widget.cc  textwidget.cc  widget.cc  widget_factory.cc
src/widgets/config/: buttonwidget_config.cc  chartwidget_config.cc  textwidget_config.cc  widget_config.cc
src/widgets/inc/widgets/: button_widget.h  button_widget.hh  chart_widget.h  chart_widget.hh  control_widget.h  control_widget.hh  single_value_widget.h  single_value_widget.hh  view_widget.hh  widget.h  widget.hh  widget_factory.h  widget_factory.hh  widget_grid.hh  widget_group.hh
src/widgets/src/: button_widget.cc  chart_widget.cc  control_widget.cc  single_value_widget.cc  view_widget.cc  widget.cc  widget_factory.cc  widget_grid.cc  widget_group.cc
(+170 files in other folders)
